# uiua

./: .gitignore  Cargo.toml  changelog.md
docs/: index.html  site-a14d4460ce493d40.js
pad/editor/: Cargo.toml
pad/editor/src/: backend.rs  lib.rs  utils.rs
site/: Cargo.toml
site/src/: blog.rs  docs.rs  main.rs  markdown.rs  other.rs  other_tutorial.rs  primitive.rs  tutorial.rs  uiuisms.rs
src/: array.rs  check.rs  dynamic.rs  grid_fmt.rs  index.rs  lex.rs  lib.rs  main.rs  run.rs  tree.rs  value.rs
src/algorithm/: loops.rs  monadic.rs  permute.rs  pervade.rs  reduce.rs
src/algorithm/dyadic/: mod.rs  search.rs  structure.rs
src/compile/: modifier.rs
src/primitive/: defs.rs  mod.rs
tests/: dyadic.ua  units.ua
